--- a/Fight or Flight/Packages/manifest.json
+++ b/Fight or Flight/Packages/manifest.json
@@ -7,7 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
-    "com.unity.inputsystem.ps4": "file:C:/Users/S20155595/Downloads/com.unity.inputsystem.ps4-0.1.3-preview.tgz",
+    "com.unity.inputsystem.ps4": "file:C:/Users/hoang/Downloads/com.unity.inputsystem.ps4-0.1.3-preview/package",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
